--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,6 +26,16 @@
 
 @media (max-width:992px) {
 
+    .services::before,
+    .services::after{
+        display: none;
+    }
+
+    .clients::before,
+    .clients::after{
+        display: none;
+    }
+
     .list {
         display: none;
     }
